--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^5.0.0-rc.1",
     "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
+    "moment": "^2.24.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
