--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
+    "ngx-material-timepicker": "^4.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
