--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
     "@ng-bootstrap/ng-bootstrap": "^5.0.0-rc.1",
+    "@okta/okta-angular": "^1.2.1",
     "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
